// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar.Link /> should render component with default props 1`] = `
.c0 {
  background-color: transparent;
  font-size: inherit;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  line-height: inherit;
  color: #3B46C4;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  border: none;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  color: auto;
}

.c0:hover,
.c0:active {
  color: #21247F;
}

.c0:hover svg path,
.c0:active svg path {
  fill: #21247F;
}

.c0:hover {
  color: auto;
}

.c0:hover svg path {
  fill: auto;
}

.c0:active {
  color: auto;
}

.c0:active svg path {
  fill: auto;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  color: #3B46C4;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 12px 16px 16px;
}

.c1:focus {
  outline: none;
  box-shadow: 0px 0px 4px 0px #3B46C4;
  border-radius: 4px;
}

.c1:active,
.c1:hover {
  color: #21247F;
  opacity: 0.88;
}

@media (max-width:1279px) {
  .c1 {
    width: 100%;
  }
}

<a
  class="c0 c1"
  color="#3B46C4"
  data-automation="ZA.navbar-item"
/>
`;

exports[`<Navbar.Link /> should render component with specific props 1`] = `
.c0 {
  background-color: transparent;
  font-size: inherit;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  line-height: inherit;
  color: #3B46C4;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  border: none;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 600;
  color: auto;
}

.c0:hover,
.c0:active {
  color: #21247F;
}

.c0:hover svg path,
.c0:active svg path {
  fill: #21247F;
}

.c0:hover {
  color: auto;
}

.c0:hover svg path {
  fill: auto;
}

.c0:active {
  color: auto;
}

.c0:active svg path {
  fill: auto;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 600;
  color: #3B46C4;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 12px 16px 16px;
}

.c1:focus {
  outline: none;
  box-shadow: 0px 0px 4px 0px #3B46C4;
  border-radius: 4px;
}

.c1:active,
.c1:hover {
  color: #21247F;
  opacity: 1;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-right: 8px;
}

.c3 {
  display: none;
}

@media (max-width:1279px) {
  .c1 {
    width: 100%;
    color: #2C3236;
    font-size: 14px;
    font-weight: 700;
    text-transform: uppercase;
  }
}

@media (min-width:1280px) {
  .c1 {
    padding: 12px 8px;
    width: calc(100% - 16px);
    margin-left: 8px;
    margin-right: 8px;
    border-radius: 8px;
  }

  .c1:hover {
    background-color: #E9EAFA;
  }
}

@media (min-width:1280px) {
  .c3 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    font-size: 12px;
    -webkit-transition: -webkit-transform 0.3s;
    -webkit-transition: transform 0.3s;
    transition: transform 0.3s;
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

<a
  class="c0 c1"
  color="#3B46C4"
  data-automation="ZA.navbar-item"
>
  <span
    class="c2"
  />
  <span
    class="c3"
    open=""
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-chevron-down fa-w-14 "
      color="#818F9B"
      data-icon="chevron-down"
      data-prefix="fas"
      focusable="false"
      height="12px"
      role="img"
      viewBox="0 0 448 512"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
        fill="currentColor"
      />
    </svg>
  </span>
</a>
`;
